@@ -15,8 +15,8 @@ import javax.servlet.ServletContext;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.jdom.Document;
 import org.jdom.output.Format;
 import org.jdom.output.XMLOutputter;
@@ -33,7 +33,7 @@ import com.github.pmairif.weberknecht.request.Executable;
  */
 public class FeedActionProcessor implements ActionViewProcessor {
 	
-	private final Log log = LogFactory.getLog(FeedActionProcessor.class);
+	private final Logger log = LoggerFactory.getLogger(FeedActionProcessor.class);
 	
 	/* (non-Javadoc)
 	 * @see de.highbyte_le.weberknecht.request.ActionProcessor#processAction(javax.servlet.http.HttpServletRequest, javax.servlet.http.HttpServletResponse, de.highbyte_le.weberknecht.request.ExecutableAction)
